--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "src"
 version = "1.0.0"
-description = "CoffeeShop API"
+description = "Locallibrary API"
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
@@ -11,6 +11,11 @@ django = "^5.1.2"
 djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
 
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.13.0"
+ruff = "^0.8.3"
+django-stubs = "^5.1.1"
 
 [build-system]
 requires = ["poetry-core"]
